<resources>
    <string name="app_name">CryptoView</string>
    <string name="page_title">CryptoView</string>
    <string name="menu_text_home">Home</string>
    <string name="menu_text_favorites">Favorites</string>
    <string name="menu_text_info">Info</string>
    <string name="menu_text_settings">Settings</string>
    <string name="menu_text_chart">Chart</string>
    <string name="settings_toast">Settings are not ready yet, please check it out later!</string>
    <string name="tags">Tags:</string>
    <string name="links">Links:</string>
    <string name="team">Team:</string>
    <string name="menu_text_search">Search</string>
    <string name="main_info">Main info:</string>
    <string name="double_tap_toast">Please press back twice to exit the app</string>
    <string name="favorite">Add to Favorite</string>
    <string name="menu_text_chat">Ai chat</string>
    <string name="http429">Too many requests performed, please try again after some time</string>
    <string name="http400">Sorry, I can\'t find any reasonable response to your question</string>
    <string name="http500">I\'m experiencing some technical difficulties right now, please come back a bit later</string>
    <string name="unknown_http_error">Unknown Http error</string>
    <string name="fundamental_report">FUNDAMENTAL REPORT</string>
    <string name="trader_report">TRADER REPORT</string>
    <string name="technology_report">TECHNOLOGY REPORT:</string>
    <string name="no_available_ai_report">No available AI report for %1$s(%2$s)</string>
</resources>