<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_text_home"/>
    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/icon_favorite"
        android:title="@string/menu_text_favorites"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_text_search"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/icon_settings"
        android:title="@string/menu_text_settings"/>
</menu>
