<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.AiReportFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/prediction_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/medium_padding">

                <TextView
                    android:id="@+id/coin_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    tools:text="Coin Name"
                    android:layout_gravity="start|center_vertical"
                    android:textSize="@dimen/biggest_text"
                    android:textStyle="bold"
                    android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:paddingStart="@dimen/medium_padding"
                android:textSize="@dimen/biggest_text"
                android:textStyle="bold"
                tools:text="Date"
                />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:text="TokenMetrics price prediction:"
                android:paddingBottom="@dimen/medium_padding"
                />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fundamental_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/medium_padding"
            app:cardBackgroundColor="@color/base3"
            app:layout_constraintTop_toBottomOf="@+id/prediction_container">

            <LinearLayout
                android:id="@+id/fundamental_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fundamental_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fundamental_report"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/fundamental_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_report_found"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/trader_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/medium_padding"
            app:cardBackgroundColor="@color/base3"
            app:layout_constraintTop_toBottomOf="@+id/fundamental_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trader_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trader_report"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/trader_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_report_found"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/technology_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/medium_padding"
            app:cardBackgroundColor="@color/base3"
            android:layout_marginBottom="@dimen/big_padding"
            app:layout_constraintTop_toBottomOf="@+id/trader_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/technology_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technology_report"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/technology_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_report_found"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_marginTop="@dimen/big_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/technology_container"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
